changes suggested by checkstyle